homebox/homebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox-pod
  template:
    metadata:
      labels:
        app: homebox-pod
    spec:
      containers:
        - name: homebox
          image: ghcr.io/hay-kot/homebox:latest
          ports:
            - containerPort: 7745
              name: http-homebox
          # resources:
          #   limits:
          #     memory: 100Mi
          #     cpu:  100m
          #   requests:
          #     cpu: 50m
          #     memory: 50Mi
          volumeMounts:
            - mountPath: /data
              name: homebox-data
      volumes:
        - name: homebox-data
          persistentVolumeClaim:
            claimName: homebox-pvc
